--- a/index.html
+++ b/index.html
@@ -28,4 +28,6 @@
     <p>Contact justGoron to have your project included (1 project per person, colaborations excluded)</p>
 </body>
 
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1MEtVfcFfA2KNwB9-P4-5Whf_ZX_JlEI&ehbc=2E312F" width="640" height="480"></iframe>
+
 </html>
