--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>BRAZA</title>
     <meta name="Bronation Association of Zoos an Aquaria" content="BRAZA">
+    <link rel="icon" type="image/x-icon" href="/Braza Logo simple white.png">
 </head>
 
 <body>
