ask people for map stuff

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <li><a href="https://www.youtube.com/playlist?list=PLOw9lPT6OR73ihOVvprAe1VoB0SddrRCJ">Giyōfū Park</a> </li>
 
     </ul>
-    <p>Contact justGoron to have your project included (1 project per person, colaborations excluded)</p>
+    <p>Contact justGoron to have your project included (1 project per person, colaborations excluded)
+        <br> Also, share a location where your zoo is on the map!
+    </p>
 </body>
 
 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1MEtVfcFfA2KNwB9-P4-5Whf_ZX_JlEI&ehbc=2E312F" width="640" height="480"></iframe>
