added balboa + twin palms

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <img src="./Braza Logo.png" style="height: 50vh;">
     <h2>list of BRAZA projects:</h2>
     <ul>
-        <li><a href="https://www.youtube.com/playlist?list=PLTe8VzE_u5F5LqyVRL9_iMU5pE-nnw9WC">Emerald Gardens</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PLhGcIR4QASx1Zk_Svp2xV9OYi_ldZk0jc">Planet Botanic</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PLs5wSz9kMdawqQB3EG1J6shzvPElkLePq">Saint Reginald Zoo</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PLbI_rScMYGc9yAft8dOXj2nDiGmtIcfiw">Broadwell Zoo and Botanical gardens</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PLs5wSz9kMdazvbdrZzpzBF28KY6jGdTd5">Tharmachati Zoo</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PLrQ9ZSHuGyq4G9LSlYC2Uqtwy6mZff3ei">Tivoli Zoo</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PL6V1-oUt4lSO5MVLgb93rtPUSuFBT718W">Orewell Zoo</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PL6W47aln8JRfRhiIuTHK9EhJ8jUyUhLyM">Safaripark Beekse Bergen</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PLWbEoBblcQ4_hB2SkPtpMAE4lavlTSRu4">Valby City Zoo</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PLs5wSz9kMdazPeqVVVmKSpjHDv9eY2WBN">Naturoscope</a> </li>
-        <li><a href="https://www.youtube.com/playlist?list=PLOw9lPT6OR73ihOVvprAe1VoB0SddrRCJ">Giyōfū Park</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLTe8VzE_u5F5LqyVRL9_iMU5pE-nnw9WC" target="_blank">Emerald Gardens</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLhGcIR4QASx1Zk_Svp2xV9OYi_ldZk0jc" target="_blank">Planet Botanic</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLs5wSz9kMdawqQB3EG1J6shzvPElkLePq" target="_blank">Saint Reginald Zoo</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLbI_rScMYGc9yAft8dOXj2nDiGmtIcfiw" target="_blank">Broadwell Zoo and Botanical gardens</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLs5wSz9kMdazvbdrZzpzBF28KY6jGdTd5" target="_blank">Tharmachati Zoo</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLrQ9ZSHuGyq4G9LSlYC2Uqtwy6mZff3ei" target="_blank">Tivoli Zoo</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PL6V1-oUt4lSO5MVLgb93rtPUSuFBT718W" target="_blank">Orewell Zoo</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PL6W47aln8JRfRhiIuTHK9EhJ8jUyUhLyM" target="_blank">Safaripark Beekse Bergen</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLWbEoBblcQ4_hB2SkPtpMAE4lavlTSRu4" target="_blank">Valby City Zoo</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLs5wSz9kMdazPeqVVVmKSpjHDv9eY2WBN" target="_blank">Naturoscope</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PLOw9lPT6OR73ihOVvprAe1VoB0SddrRCJ" target="_blank">Giyōfū Park</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PL9cpFSvNYKeFXhP8kAd5Oxbnmz0C2pqJh" target="_blank">Balboa Zoo</a> </li>
+        <li><a href="https://www.youtube.com/playlist?list=PL9cpFSvNYKeH8bt9APElJLrHwupZDnbUj" target="_blank">Twin Palms</a> </li>
 
     </ul>
     <p>Contact justGoron to have your project included (1 project per person, colaborations excluded)
