--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <title>BRAZA</title>
     <meta name="Bronation Association of Zoos an Aquaria" content="BRAZA">
-    <link rel="icon" type="image/x-icon" href="/Braza Logo simple white.png">
+    <link rel="icon" type="image/x-icon" href="/Braza Logo simple.png">
 </head>
 
-<body>
-    <h1>Welcome to the Bronation Association of Zoos and Aquaria</h1>
+<body style="margin-left: 10%;">
+    <h1> <img src="./Braza Logo.png" style="height: 20vh;"> Welcome to the Bronation Association of Zoos and Aquaria</h1>
     <p>Website under construction.</p>
-    <img src="./Braza Logo.png" style="height: 50vh;">
     <h2>list of BRAZA projects:</h2>
     <ul>
         <li><a href="https://www.youtube.com/playlist?list=PLTe8VzE_u5F5LqyVRL9_iMU5pE-nnw9WC" target="_blank">Emerald Gardens</a> </li>
@@ -31,8 +30,12 @@
     <p>Contact justGoron to have your project included (1 project per person, colaborations excluded)
         <br> Also, share a location where your zoo is on the map!
     </p>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1MEtVfcFfA2KNwB9-P4-5Whf_ZX_JlEI&ehbc=2E312F" width="640" height="480"></iframe>
+    <h1>Acronyms:</h1>
+    <p>
+        ASS - Animal Species Safeguarding
+    </p>
 </body>
 
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1MEtVfcFfA2KNwB9-P4-5Whf_ZX_JlEI&ehbc=2E312F" width="640" height="480"></iframe>
 
 </html>
