--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/Braza Logo simple.png">
 </head>
 
-<body style="margin-left: 10%;">
+<body style="margin-left: 10%; margin-right: 10%;">
     <h1> <img src="./Braza Logo.png" style="height: 20vh;"> Welcome to the Bronation Association of Zoos and Aquaria</h1>
     <p>Website under construction.</p>
     <h2>list of BRAZA projects:</h2>
@@ -34,6 +34,13 @@
     <h1>Acronyms:</h1>
     <p>
         ASS - Animal Species Safeguarding
+    </p>
+    <h1>BRAZA campaigns:</h1>
+    <p>
+        The idea is to create some campaigns to put into our zoos for storybuilding. Similar to how in Europe you will find signs in many zoos about the Silent Forest Campaign. 
+        <ul>
+            <li>The PPP - Platypus Protection Program (an excuse to have Platypus in our zoos, huray!)</li>
+        </ul>
     </p>
 </body>
 
