--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>
         The idea is to create some campaigns to put into our zoos for storybuilding. Similar to how in Europe you will find signs in many zoos about the Silent Forest Campaign. 
         <ul>
-            <li>The PPP - Platypus Protection Program (an excuse to have Platypus in our zoos, huray!)</li>
+            <li>The PP - Platypus Project (an excuse to have Platypus in our zoos, huray!)</li>
         </ul>
     </p>
 </body>
